i18n: move route headings/addresses into messages.js and organize keys by page

--- a/ruta.html
+++ b/ruta.html
@@ -80,27 +80,27 @@
     <h2 data-msg="ruta.h2"></h2>
 
     <div class="pista">
-      <h2>Pista 1: Doble & Gilda</h2>
+      <h2 data-msg="route.pista1_title"></h2>
       <div class="emoji">🫒🍺</div>
-      <p class="coords"><a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Sta%20Engracia%2C%20105%2C%20Chamber%C3%AD%2C%2028010%20Madrid" target="_blank" rel="noopener">Calle de Sta Engracia, 105, Chamberí, 28010 Madrid</a></p>
+      <p class="coords"><a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Sta%20Engracia%2C%20105%2C%20Chamber%C3%AD%2C%2028010%20Madrid" target="_blank" rel="noopener" data-msg="route.pista1_address"></a></p>
     </div>
 
     <div class="pista">
-      <h2>Pista 2: La Gildería</h2>
+      <h2 data-msg="route.pista2_title"></h2>
      <div class="emoji">🍷🫒</div>
-    <p class="coords"><a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Trafalgar%2C%2015%2C%20Chamber%C3%AD%2C%2028010%20Madrid" target="_blank" rel="noopener">Calle de Trafalgar, 15, Chamberí, 28010 Madrid</a></p>
+    <p class="coords"><a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Trafalgar%2C%2015%2C%20Chamber%C3%AD%2C%2028010%20Madrid" target="_blank" rel="noopener" data-msg="route.pista2_address"></a></p>
     </div>
 
     <div class="pista">
-      <h2>Pista 3: Gilda Haus</h2>
+      <h2 data-msg="route.pista3_title"></h2>
       <p class="emoji">🎶🍸🫒</p>
-      <p class="coords"><a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20San%20Mateo%2C%206%2C%20Centro%2C%2028004%20Madrid" target="_blank" rel="noopener">Calle de San Mateo, 6, Centro, 28004 Madrid</a></p>
+      <p class="coords"><a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20San%20Mateo%2C%206%2C%20Centro%2C%2028004%20Madrid" target="_blank" rel="noopener" data-msg="route.pista3_address"></a></p>
     </div>
 
     <div class="pista">
-      <h2>Pista 4: Salmon Guru</h2>
+      <h2 data-msg="route.pista4_title"></h2>
       <p class="emoji">🐟🍹🎨</p>
-      <p class="coords"><a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Echegaray%2C%2021%2C%20Centro%2C%2028014%20Madrid" target="_blank" rel="noopener">Calle de Echegaray, 21, Centro, 28014 Madrid</a></p>
+      <p class="coords"><a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Echegaray%2C%2021%2C%20Centro%2C%2028014%20Madrid" target="_blank" rel="noopener" data-msg="route.pista4_address"></a></p>
     </div>
 
   </div>
